src/App.css
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Pacifico&display=swap");

:root {
  --text: #272716;
  --background: #fefcf7;
  --primary: hsl(39, 82%, 50%);
  --primary-backdrop: hsl(39 60% 50% / 1);
  --secondary: #e1e199;
  --accent: hsl(216, 35%, 60%);

  --normal-font: "Lato", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-family: var(--normal-font);
  line-height: 1.5;
  font-weight: 500;

  color-scheme: light dark;
  color: var(--text);
  background-color: var(--background);

  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
}

#root {
  max-width: 100vw;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 48px;

  padding: 1.5rem 7rem 1.5rem 5rem;
  border-bottom: 2px solid var(--secondary);
  background-color: white;
  box-shadow: 0px 4px 5px -1px rgba(0, 0, 0, 0.2);
}

nav a {
  color: var(--primary);
  font-weight: 600;
  text-decoration: none;
}

nav .logo-large {
  color: var(--primary);
  font-family: "Pacifico", cursive, Impact, Haettenschweiler, sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 2rem;
}

nav .right-side {
  margin-top: 8px;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
}

